.provarCaches/00D410000011HE0EAM/objects/rstkf__glbankstmtd__c.object
<CustomObject>
    <description>glbankstmtd__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <description>altextid</description>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glbankstmtd_glbankstmth__c&amp;&apos;&apos;&amp; rstkf__glbankstmtd_seq__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_addedinrecon__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added Transaction?</description>
        <inlineHelpText>If checked, this transaction was added during the Bank Statement Reconciliation process.</inlineHelpText>
        <label>Added Transaction?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_addedtxnvalue__c</fullName>
        <formula>IF(rstkf__glbankstmtd_addedinrecon__c,  rstkf__glbankstmtd_bankamt__c , 0)</formula>
        <inlineHelpText>Set to Amount Reported by Bank if Added Transaction? is checked.</inlineHelpText>
        <label>Added Transaction Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_arcashh__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cash Deposit</description>
        <inlineHelpText>For future use. If a cash deposit reported by the bank is turned into a cash receipt by the Bank Statement Reconciliation process, this will be a link to the deposit header record.</inlineHelpText>
        <label>Cash Deposit</label>
        <referenceTo>rstkf__arcashh__c</referenceTo>
        <relationshipLabel>Statement Lines</relationshipLabel>
        <relationshipName>Statement_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_arinvdue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unapplied Cash Item Created</description>
        <inlineHelpText>For future use. When bank deposits are reported on the bank statement (instead of being entered in cash receipts), they will create Unapplied Cash items in the AR. This will be a link to the Unapplied Cash item created from this statement line.</inlineHelpText>
        <label>Unapplied Cash Item Created</label>
        <referenceTo>rstkf__arinvdue__c</referenceTo>
        <relationshipLabel>Statement Lines</relationshipLabel>
        <relationshipName>Statement_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_bankamt__c</fullName>
        <description>Amount Reported by Bank</description>
        <inlineHelpText>This is the amount (in bank account currency) that the bank statement says is the value of this transaction.</inlineHelpText>
        <label>Amount Reported by Bank</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_bankamtcopy__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Copy of GLBANKSTMTD_BANKAMT. Can be safely used in formulas.</inlineHelpText>
        <label>Copy of System Txn Bank Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_bankamtrecon__c</fullName>
        <inlineHelpText>If Reconciled? is not checked, this is zero. Otherwise, if Reconciled to Multiple System Txns is not checked, this is set to Amount Reported by Bank and if Reconciled to Multiple System Txns is checked, this is less than Amount Reported by Bank.</inlineHelpText>
        <label>Amount Reconciled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_bankdate__c</fullName>
        <description>Date per Bank</description>
        <inlineHelpText>The date the bank assigns to this transaction.</inlineHelpText>
        <label>Date per Bank</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_bankref__c</fullName>
        <description>Bank&apos;s Transaction Reference</description>
        <inlineHelpText>The bank’s identifying reference for this particular line of the bank statement.</inlineHelpText>
        <label>Bank&apos;s Transaction Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_banktrantype__c</fullName>
        <description>Bank&apos;s Transaction Type</description>
        <inlineHelpText>The Rootstock equivalent to the bank’s assigned transaction type. If the bank statement is upload via BRATO, the bank’s transaction type is automatically translated. If not, the Rootstock transaction type is selected from a dropdown menu.</inlineHelpText>
        <label>Bank&apos;s Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AP Check</fullName>
                </value>
                <value>
                    <fullName>AP EFT Payment (General)</fullName>
                </value>
                <value>
                    <fullName>AP ACH Payment</fullName>
                </value>
                <value>
                    <fullName>AP ACH/EFT Fees</fullName>
                </value>
                <value>
                    <fullName>AR Cash Deposit</fullName>
                </value>
                <value>
                    <fullName>AR ACH/EFT Payment Reported by Bank</fullName>
                </value>
                <value>
                    <fullName>Transfers/Adjustments Made by JE</fullName>
                </value>
                <value>
                    <fullName>Bank Fees/Service Charges</fullName>
                </value>
                <value>
                    <fullName>Bank Reports Credit Card Deposit</fullName>
                </value>
                <value>
                    <fullName>Credit Card Processing Fee</fullName>
                </value>
                <value>
                    <fullName>Interest Income</fullName>
                </value>
                <value>
                    <fullName>Interest Expense</fullName>
                </value>
                <value>
                    <fullName>All Other Adjustments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_clrddephere__c</fullName>
        <formula>IF( ISPICKVAL( rstkf__glbankstmtd_reconstatus__c , &apos;Not reconciled&apos;), 
	0,
	IF(rstkf__glbankstmtd_recontrantype__c == &apos;AR Cash Deposit&apos;, rstkf__glbankstmtd_bankamtcopy__c,0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The value (if any) in bank account currency of a bank deposit reconciled on this bank statement line.</inlineHelpText>
        <label>Deposits Cleared in This Transaction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_clrdpayhere__c</fullName>
        <formula>IF( ISPICKVAL( rstkf__glbankstmtd_reconstatus__c , &apos;Not reconciled&apos;), 
	0,
	IF( OR( rstkf__glbankstmtd_recontrantype__c == &apos;AP Check&apos;, 
			rstkf__glbankstmtd_recontrantype__c == &apos;AP Cash Payment&apos;,
			rstkf__glbankstmtd_recontrantype__c == &apos;AP EFT Payment (General)&apos;,
			rstkf__glbankstmtd_recontrantype__c == &apos;AP ACH Payment&apos;,
			rstkf__glbankstmtd_recontrantype__c == &apos;AP Credit Card Payment&apos;),
		rstkf__glbankstmtd_bankamtcopy__c,
		0)
)</formula>
        <inlineHelpText>The value (if any) in bank account currency of an AP payment reconciled on this bank statement line.</inlineHelpText>
        <label>Payments Cleared in This Transaction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_clrdxferthere__c</fullName>
        <formula>IF( ISPICKVAL( rstkf__glbankstmtd_reconstatus__c , &apos;Not reconciled&apos;), 
	0,
	IF( rstkf__glbankstmtd_recontrantype__c == &apos;Transfers/Adjustments Made by JE&apos;,
		rstkf__glbankstmtd_bankamtcopy__c,
		0)
)</formula>
        <inlineHelpText>The value (if any) in bank account currency of a transfer or adjustment (entered by journal entry) that has been reconciled on this bank statement line.</inlineHelpText>
        <label>Transfers Cleared in This Transaction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_custstr__c</fullName>
        <description>Customer string</description>
        <inlineHelpText>For future use. If an AR payment is reported by the bank and the bank statement is downloaded from BRATO, this will be a string of characters matching all or part of the NAME field of a customer company record.</inlineHelpText>
        <label>Customer string</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_custstrmatches__c</fullName>
        <description>Customer string matches</description>
        <inlineHelpText>For future use. If an AR payment is reported by the bank and the bank statement is downloaded from BRATO, this will be the number of customer company records that match Customer string.</inlineHelpText>
        <label>Customer string matches</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_exchrate__c</fullName>
        <description>Exchange Rate</description>
        <inlineHelpText>The rate of exchange between the bank account currency and the company’s functional (home) currency as of Date per Bank. Will be set to 1 if the bank account currency is the same as the company’s functional (home) currency.</inlineHelpText>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_glbankstmth__c</fullName>
        <description>Statement Header</description>
        <inlineHelpText>This is a link to the bank statement header record.</inlineHelpText>
        <label>Statement Header</label>
        <referenceTo>rstkf__glbankstmth__c</referenceTo>
        <relationshipLabel>Statement Lines</relationshipLabel>
        <relationshipName>Statement_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_homeamt__c</fullName>
        <formula>ROUND(( rstkf__glbankstmtd_bankamt__c * rstkf__glbankstmtd_exchrate__c ),2)</formula>
        <inlineHelpText>Set to Amount Reported by Bank multiplied by Exchange Rate.</inlineHelpText>
        <label>Amount in Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_isposted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this statement line has resulted in a posted GL transaction.</inlineHelpText>
        <label>Posted to GL?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_matchedto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Rootstock Bank Transaction</description>
        <inlineHelpText>If Reconciled? is checked, this is a link to the Rootstock system transaction to which this bank statement line has been matched.</inlineHelpText>
        <label>Rootstock Bank Transaction</label>
        <referenceTo>rstkf__glbanktxn__c</referenceTo>
        <relationshipLabel>Statement Lines</relationshipLabel>
        <relationshipName>Statement_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_multirecon__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, one statement line has been matched to multiple Rootstock system transactions. This statement line is either (1) the one that was split, in which case The Record Was Split into Several is true (checked) and This Record is the Result of a Split is false (not checked), or (2) a record created from one that was split, in which case The Record Was Split into Several is false (not checked) and This Record is the Result of a Split is true (checked). 

Whenever Reconciled to Multiple System Txns is checked, Amount Reconciled will be less than Amount Reported by Bank. Whenever Reconciled to Multiple System Txns is not checked but Reconciled? is checked, Amount Reconciled will equal Amount Reported by Bank. If Reconciled? is not checked, Amount  Reconciled will equal zero.</description>
        <inlineHelpText>If checked, this statement line has been (or will be) split and then matched to multiple Rootstock system transactions. This is most likely to occur when the bank reports a single deposit that was entered as multiple Quick Cash Receipts transactions.</inlineHelpText>
        <label>Reconciled to Multiple System Txns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_posted__c</fullName>
        <formula>false</formula>
        <inlineHelpText>If checked, this statement line has resulted in a posted GL transaction.</inlineHelpText>
        <label>Posted to GL?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_reconciled__c</fullName>
        <formula>IF(ISPICKVAL(rstkf__glbankstmtd_reconstatus__c, &apos;Not Reconciled&apos;), false, true)</formula>
        <inlineHelpText>If checked, this statement line has been reconciled to one or more Rootstock system transactions.</inlineHelpText>
        <label>Reconciled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_reconstatus__c</fullName>
        <description>One of fourteen values that indicate whether the statement line has been matched to a Rootstock system transaction, and if so, with what degree of confidence:
Not reconciled: This transaction has not been matched.

Fully, trial: Transaction has been fully matched (no ambiguity, no variance) to a Rootstock system transaction, but the user has not yet accepted the match. 

Fully, accepted: Transaction has been fully matched (no ambiguity, no variance) to a Rootstock system transaction, and the user has accepted the match.

Variance, trial: Transaction has been unambiguously matched to a Rootstock system transaction (only one Rootstock system transaction exactly matches the Bank&apos;s Transaction Reference and the Bank&apos;s Transaction Reference is unique), but there is a variance. The user has not yet accepted the match.

Variance, accepted: Transaction has been unambiguously matched to a Rootstock system transaction (only one Rootstock system transaction exactly matches the Bank&apos;s Tra</description>
        <inlineHelpText>One of fourteen values that indicate whether the statement line has been matched to a Rootstock system transaction, and if so, with what degree of confidence.</inlineHelpText>
        <label>Match Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not reconciled</fullName>
                </value>
                <value>
                    <fullName>Fully, trial</fullName>
                </value>
                <value>
                    <fullName>Fully, accepted</fullName>
                </value>
                <value>
                    <fullName>Variance, trial</fullName>
                </value>
                <value>
                    <fullName>Variance, accepted</fullName>
                </value>
                <value>
                    <fullName>Ambiguous, no variance, trial</fullName>
                </value>
                <value>
                    <fullName>Ambiguous, no variance, accepted</fullName>
                </value>
                <value>
                    <fullName>Ambiguous, variance, trial</fullName>
                </value>
                <value>
                    <fullName>Ambiguous, variance, accepted</fullName>
                </value>
                <value>
                    <fullName>Manual, no variance, not confirmed</fullName>
                </value>
                <value>
                    <fullName>Manual, no variance, confirmed</fullName>
                </value>
                <value>
                    <fullName>Manual, variance, not confirmed</fullName>
                </value>
                <value>
                    <fullName>Manual, variance, confirmed</fullName>
                </value>
                <value>
                    <fullName>Match reversed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_recontrantype__c</fullName>
        <label>Reconciled Transaction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_recontxnvalue__c</fullName>
        <formula>IF(!rstkf__glbankstmtd_addedinrecon__c &amp;&amp; rstkf__glbankstmtd_reconciled__c,  rstkf__glbankstmtd_bankamtcopy__c , 0)</formula>
        <inlineHelpText>The amount (if any) by which this statement line reduced the unreconciled balance of Rootstock system transactions. In bank account currency.</inlineHelpText>
        <label>Reconciled Transaction Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_seq__c</fullName>
        <description>Sequence in Input</description>
        <inlineHelpText>If the statement was loaded from BRATO, this is the statement line’s sequence in the bank’s input file. If not, this is the order in which the user entered the statement line.</inlineHelpText>
        <label>Sequence in Input</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_socustcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer</description>
        <inlineHelpText>For future use. If an AR payment is reported by the bank and the bank statement is downloaded from BRATO, this will be a link to the associated customer company record.</inlineHelpText>
        <label>Customer</label>
        <referenceTo>rstkf__socustcmpno__c</referenceTo>
        <relationshipLabel>Statement Lines</relationshipLabel>
        <relationshipName>Statement_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_splitofffrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If Reconciled to Multiple System Txns and This Record is the Result of a Split are both true (checked), this is a link to the statement line that was split into two or more. Otherwise, this is null.</inlineHelpText>
        <label>The Record this Record Was Split From</label>
        <referenceTo>rstkf__glbankstmtd__c</referenceTo>
        <relationshipLabel>Statement Lines</relationshipLabel>
        <relationshipName>glbankstmtds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_splitoffspring__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Reconciled to Multiple System Txns and This Record is the Result of a Split are both checked, this statement line was created in the statement reconciliation process so that one bank-supplied line could be matched to many Rootstock system transactions.</inlineHelpText>
        <label>This Record is the Result of a Split</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_splitparent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If Reconciled to Multiple System Txns and The Record Was Split into Several are both true (checked), this statement line was split into two or more lines, each of which was reconciled to a Rootstock system transaction.</inlineHelpText>
        <label>The Record Was Split into Several</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_syforexschedno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Exchange Rate Schedule</description>
        <inlineHelpText>A link to the exchange rate schedule record that was the source of Exchange Rate. Exchange Rate Schedule will be blank if the bank account currency is the same as the company’s functional (home) currency.</inlineHelpText>
        <label>Exchange Rate Schedule</label>
        <referenceTo>rstkf__syforexschedno__c</referenceTo>
        <relationshipLabel>Statement Lines</relationshipLabel>
        <relationshipName>Statement_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_varacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Variance Account (non-cash side)</description>
        <inlineHelpText>If Variance is non-zero, this is a link to the GL account to which it has been (or will be) charged.</inlineHelpText>
        <label>Variance Account (non-cash side)</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Statement Lines</relationshipLabel>
        <relationshipName>Statement_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_variance__c</fullName>
        <formula>IF(!ISBLANK(rstkf__glbankstmtd_matchedto__c) &amp;&amp; !rstkf__glbankstmtd_multirecon__c, 
  (rstkf__glbankstmtd_bankamt__c - rstkf__glbankstmtd_matchedto__r.rstkf__glbanktxn_viewbankamt__c), 
  0
)</formula>
        <inlineHelpText>If Reconciled? is checked, this is the Variance (in bank account currency) between the Rootstock system transaction amount and the bank-reported amount. Positive numbers become debits to cash, negative numbers become credits.</inlineHelpText>
        <label>Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbankstmtd_variancecopy__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Copy of GLBANKSTMTD_VARIANCE</inlineHelpText>
        <label>Copy of Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>Triggeroptions</description>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Statement Lines</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glbankstmtd_glbankstmth__c</columns>
        <columns>rstkf__glbankstmtd_addedinrecon__c</columns>
        <columns>rstkf__glbankstmtd_addedtxnvalue__c</columns>
        <columns>rstkf__glbankstmtd_bankamt__c</columns>
        <columns>rstkf__glbankstmtd_bankref__c</columns>
        <columns>rstkf__glbankstmtd_bankdate__c</columns>
        <columns>rstkf__glbankstmtd_reconciled__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statement Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>